--- a/notebooks/Programming/Basic C++.ipynb
+++ b/notebooks/Programming/Basic C++.ipynb
@@ -641,7 +641,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8fdee43e",
    "metadata": {},
@@ -717,7 +716,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "96f09ce4",
    "metadata": {},
@@ -828,7 +826,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6f17339d",
    "metadata": {},
@@ -901,7 +898,160 @@
    "metadata": {},
    "source": [
     "## File handling\n",
-    "\n"
+    "\n",
+    "### File stream\n",
+    "\n",
+    "<b>Stream</b> คือการไหลของข้อมูลเข้าหรือออกจากโปรแกรม เรารู้จักไปแล้ว 2 stream ได้แก่ `cin` กับ `cout`\n",
+    "\n",
+    "ในการทำงานกับไฟล์ เราจะใช้ stream ที่เรียกว่า `fstream`\n",
+    "- ต้อง `#include <fstream>`\n",
+    "- ประกาศ `fstream` object ได้ดังนี้ `fstream myFile;`\n",
+    "\n",
+    "เมื่อประกาศ `fstream` object แล้ว เราสามารถใช้ฟังก์ชัน `open` เพื่อเปิดไฟล์ได้ดังนี้ `myFile.open(filename, flag);` \n",
+    "- เมื่อเปิดไฟล์แล้ว ควรใช้ฟังก์ชัน `fail` เพื่อตรวจสอบว่าเปิดไฟล์สำเร็จหรือไม่ (return `true` ถ้าเปิดไฟล์ไม่ได้)\n",
+    "- เมื่อใช้ `fstream` เสร็จ ต้องปิดโดยใช้ฟังก์ชัน `close` เพื่อให้โปรแกรมอื่นสามารถเปิดไฟล์นี้ได้ และกำจัด buffer (unwritten output)\n",
+    "- flag ต่าง ๆ มีจุดประสงค์ในการใช้ที่ต่างกัน เช่น\n",
+    "    - ใช้ `fstream::in` เพื่ออ่านไฟล์และใช้เป็น input ทำไม่ได้ถ้าไฟล์ที่จะเปิดนั้นไม่มีอยู่\n",
+    "    - ใช้ `fstream::out` เพื่อเขียนไฟล์ อาจมีปัญหาหากไฟล์นั้นกำลังถูกเปิดอยู่ในอีกโปรแกรมหนึ่ง\n",
+    "    - ใช้ `fstream::binary` เพื่อเขียน binary file\n",
+    "    - ใช้ `fstream::app` เพื่อเขียนต่อ (append) จากไฟล์เดิม\n",
+    "    - ใช้ `fstream::trunc` เพื่อ clear ไฟล์\n",
+    "    - ใช้หลาย flag พร้อมกันได้โดยใช้ bitwise or (`|`) เป็นตัวเชื่อม\n",
+    "\n",
+    "```\n",
+    "#include <iostream>\n",
+    "#include <fstream>\n",
+    "using namespace std;\n",
+    "\n",
+    "int main()\n",
+    "{\n",
+    "\tfstream file;\n",
+    "\n",
+    "\t// Open file\n",
+    "\tfile.open(\"test.txt\", fstream::out);\n",
+    "\tif (file.fail())\n",
+    "\t{\n",
+    "\t\tcout << \"Error opening file!\" << endl;\n",
+    "\t\texit(0);  // Exit the program (return 0; also works)\n",
+    "\t}\n",
+    "\n",
+    "\t// Write the file\n",
+    "\tfile << \"Hello World!\" << endl;\n",
+    "\n",
+    "\t// Close the file\n",
+    "\tfile.close();\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Binary file handling\n",
+    "\n",
+    "Text file มีข้อดีคือ เก็บข้อมูลเป็น text คนและโปรแกรมอื่นจึงอ่านได้ แต่มีข้อเสียคือ ข้อมูลที่เป็นตัวเลขจะถูกปัดให้เหลือ 6 s.f. ก่อนแปลงเป็น text และ text file จะมีขนาดใหญ่กว่า binary file ถ้ามีข้อมูลเท่ากัน เพราะตัวอักษร 1 ตัวมีขนาด 1 byte\n",
+    "\n",
+    "Binary file เก็บข้อมูลในลักษณะเดียวกับที่ถูกเก็บใน memory ข้อมูลจึงไม่ผิดเพี้ยนไปจากเดิม แต่คนไม่สามารถอ่านได้ และเปิดในบางโปรแกรมไม่ได้\n",
+    "\n",
+    "ฟังก์ชัน `open` จะเปิด text file by default ดังนั้น ถ้าต้องการเขียน binary file จะต้องมีนามสกุลไฟล์เป็น `.bin` และต้องมี flag `fstream::binary` ด้วย\n",
+    "\n",
+    "การเขียนและอ่าน binary file ทำได้โดยใช้ฟังก์ชัน `write` และ `read` ตามลำดับ\n",
+    "\n",
+    "```\n",
+    "#include <iostream>\n",
+    "#include <fstream>\n",
+    "using namespace std;\n",
+    "\n",
+    "fstream file;\n",
+    "char** name;\n",
+    "int* age;\n",
+    "int num_data;\n",
+    "\n",
+    "void load_file(const char* fname)\n",
+    "{\n",
+    "\tfile.open(fname, fstream::in | fstream::binary);\n",
+    "\n",
+    "\tif (file.fail())\n",
+    "\t{\n",
+    "\t\tnum_data = 0;\n",
+    "\t}\n",
+    "\telse\n",
+    "\t{\n",
+    "\t\tfile.read((char*)&num_data, sizeof(int));\n",
+    "\t}\n",
+    "\n",
+    "\tname = (char**) new char* [num_data + 1];\n",
+    "\tfor (int i = 0; i < num_data + 1; i++)\n",
+    "\t{\n",
+    "\t\tname[i] = new char[100];\n",
+    "\t}\n",
+    "\n",
+    "\tage = new int[num_data + 1];\n",
+    "\tfor (int i = 0; i < num_data; i++)\n",
+    "\t{\n",
+    "\t\tfile.read(name[i], sizeof(char) * 100);\n",
+    "\t\tfile.read((char*)&age[i], sizeof(int));\n",
+    "\t}\n",
+    "\n",
+    "\tfile.close();\n",
+    "}\n",
+    "\n",
+    "void save_file(const char* fname)\n",
+    "{\n",
+    "\tfile.open(fname, fstream::out | fstream::binary);\n",
+    "\n",
+    "\tif (file.fail())\n",
+    "\t{\n",
+    "\t\tcout << \"Can't open the file for writing\" << endl;\n",
+    "\t\texit(0);\n",
+    "\t}\n",
+    "\n",
+    "\tfile.write((char*)&num_data, sizeof(int));\n",
+    "\tfor (int i = 0; i < num_data; i++)\n",
+    "\t{\n",
+    "\t\tfile.write(name[i], sizeof(char) * 100);\n",
+    "\t\tfile.write((char*)&age[i], sizeof(int));\n",
+    "\t}\n",
+    "\n",
+    "\tfile.close();\n",
+    "\n",
+    "\tfor (int i = 0; i < num_data; i++)\n",
+    "\t{\n",
+    "\t\tdelete[] name[i];\n",
+    "\t}\n",
+    "\n",
+    "\tdelete[] name;\n",
+    "\tdelete[] age;\n",
+    "}\n",
+    "\n",
+    "int main()\n",
+    "{\n",
+    "\tload_file(\"data.bin\");\n",
+    "\tcout << \"These people have run this program already: \" << endl;\n",
+    "\tfor (int i = 0; i < num_data; i++)\n",
+    "\t{\n",
+    "\t\tcout << \"Name: \\t\" << name[i] << \"\\tAge: \\t\" << age[i] << endl;\n",
+    "\t}\n",
+    "\tcout << endl << \"What is your name? \";\n",
+    "\tcin.getline(name[num_data], 100);\n",
+    "\tcout << \"What is your age? \";\n",
+    "\tcin >> age[num_data];\n",
+    "\tnum_data++;\n",
+    "\tsave_file(\"data.bin\");\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49161fb5",
+   "metadata": {},
+   "source": [
+    "## OOP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a751281",
+   "metadata": {},
+   "source": [
+    "## Templating"
    ]
   },
   {
@@ -993,24 +1143,13 @@
     "| - | - |\n",
     "| `<vector>.size()` | บอกจำนวนสมาชิกใน vector |\n",
     "| `<vector>.at(index)` | เข้าถึงค่าใน vector ณ ตำแหน่งที่กำหนด |\n",
-    "| `<vector>.push_back(element)` | เพิ่มสมาชิกใหม่ที่หลังสุดของ vector (append) |"
+    "| `<vector>.push_back(element)` | เพิ่มสมาชิกใหม่ที่หลังสุดของ vector (append) |\n",
+    "| `<vector>.pop_back()` | เอาสมาชิกตัวสุดท้ายออกจาก vector |\n",
+    "| `<vector>.clear()` | ลบสมาชิกทั้งหมดใน vector |\n",
+    "| `<vector>.reserve(length)` | allocate memory ของ vector เอาไว้ก่อน เผื่อมีจำนวนสมาชิกเพิ่มขึ้นหรือลดลงจะได้ไม่ต้อง allocate และ de-allocate memory ทุกรอบ ทำให้โปรแกรมทำงานเร็วขึ้น มักใช้เมื่อเรารู้ว่าเราต้องการใช้ vector ใหญ่แค่ไหน |\n",
+    "| `<vector>.resize(new_length)` | กำหนดขนาดใหม่ (และ allocate memory ใหม่) ของ vector |\n",
+    "| `<vector>.insert(...)` | แทรกสมาชิกใหม่ไปอยู่กลาง vector (ทำให้โปรแกรมช้าลงได้มาก จึงควรใช้เมื่อจำเป็นจริง ๆ) |"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b1f0d93",
-   "metadata": {},
-   "source": [
-    "## Generic functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5b621b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
